ecmascript/parser/tests/test262-error-references/fail/48c7f50c23d3cbc0.js.stderr
error: Expected Semi
 --> $DIR/tests/test262-parser/fail/48c7f50c23d3cbc0.js:1:8
  |
1 | a: let a
  |        ^

